se agregan 6 definiciones y diseño

--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
 			<div id="contentcolumn">
 				<div class="innertube">
 					<!-- ESPACIO CENTRAL -->
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at lectus vel arcu vestibulum ultrices vitae sed dui. Donec vestibulum suscipit mi, non laoreet lacus condimentum lobortis. Nam at venenatis nisl. Sed convallis molestie orci, sit amet mattis erat cursus quis. Ut ultricies pharetra enim, faucibus suscipit tellus varius eu.</p>
+					<p>
+                                    <h2>Comandos para la consola</h2>
+
+            <ol class="comando">
+                  <li>Git Init :</li>
+                        <p>Para crear un nuevo repositorio en git</p>
+                  <li>Git add .:</li>
+                        <p>Registra cambios</p>
+                        <li>Git commit -m "<i>comentario</i>" :</li>
+                        <p>Sirve para hacer comentarios para los cambios subidos</p>
+                  <li>Git clone :</li>
+                        <p>Clona un repositorio remoto dentro de un directorio</p>
+                  <li>Git Status :</li>
+                        <p>Imprime un reporte del estado actual del árbol de trabajo local</p>
+                        <li>Git Help <i>comando</i>:</li>
+                        <p>Muestra la ayuda para ese comando</p>
+            </ol>                         
+                              </p>
 				</div>
 			</div>
 		</div>
