tabla con contacto de github de las colaboradoras lobas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ejercicio git+css</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script type="text/javascript">
 		var gibberish=["This is just some filler text", "Welcome to Dynamic Drive CSS Library", "Demo content nothing to read here"]
@@ -34,7 +34,54 @@
 				<!-- BARRA IZQUIERDA -->
 				<p>Donec mollis justo diam, eget sodales odio dapibus id. Nunc quis libero dolor. Praesent pulvinar massa vestibulum neque suscipit, id laoreet lorem ultrices. Ut at urna vel eros convallis sollicitudin. Curabitur pharetra elit eu lorem tristique cursus. Fusce aliquam ligula a ligula iaculis bibendum. Vivamus nec mauris in velit rhoncus sagittis ac id massa. In hac habitasse platea dictumst. Aliquam fringilla non lectus ut lobortis. In hac habitasse platea dictumst. Praesent nec tellus leo.</p>
 			</div>
+
+
+            <table>
+            	<thead>
+            		<tr>
+            			<th>Nombre</th>
+            			<th>Usuario de Github</th>
+            		</tr>
+            	</thead>
+            	<tbody>            		
+            		<tr>
+            			<td>Ingrid Mercado</td>
+            			<td><a href="https://github.com/Srta-Iny">Srta-Iny</a></td>
+            		</tr>
+            		<tr>
+            			<td>Daniela Espinoza</td>
+            			<td><a href="https://github.com/DaniEspinozaPoo">DaniEspinozaPoo</a></td>
+            		</tr>
+            		<tr>
+            			<td>Patricia Pérez</td>
+            			<td><a href="https://github.com/Patriciadisain">Patriciadisain</a></td>  
+            		</tr>
+            		<tr>
+            			<td>Alejandra Contreras</td> 
+            			<td><a href="https://github.com/AleJaContrers">AlejaContreras</a></td>  
+            		</tr>
+            		<tr>         	 
+            			<td>Sou-elene Cruces</td>
+            			<td><a href="https://github.com/souelene">souelene</a></td>
+            		</tr>
+                    <tr>
+            			<td>Alejandra Astudillo</td>
+            			<td><a href="https://Github.com/aleastudillo211">aleastudillo</a></td>
+            		</tr>
+            		<tr>
+            			<td>Valentina Barrientos</td>
+            			<td><a href="https://Github.com/rayenb">rayenb</a></td>
+            		</tr>
+            		<tr>
+            			<td>Paulina Buhrle</td>
+            			<td><a href="https://Github.com/buhrlerocha">buhrlerocha</a></td>
+            		</tr>
+            	</tbody>
+            </table>
+
+
 		</div>
+
 
 		<div id="footer"><a href="http://www.laboratoria.cl/" target="_blank">Laboratoria</a></div>
 
