--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ejercicio git+css</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script type="text/javascript">
 		var gibberish=["This is just some filler text", "Welcome to Dynamic Drive CSS Library", "Demo content nothing to read here"]
@@ -16,6 +16,7 @@
 
 </head>
 <body>
+
 	<div id="maincontainer">
 
 		<div id="topsection"><div class="innertube"><h1>Base del Ejercicio</h1></div></div>
@@ -32,7 +33,10 @@
 		<div id="leftcolumn">
 			<div class="innertube">
 				<!-- BARRA IZQUIERDA -->
-				<p>Donec mollis justo diam, eget sodales odio dapibus id. Nunc quis libero dolor. Praesent pulvinar massa vestibulum neque suscipit, id laoreet lorem ultrices. Ut at urna vel eros convallis sollicitudin. Curabitur pharetra elit eu lorem tristique cursus. Fusce aliquam ligula a ligula iaculis bibendum. Vivamus nec mauris in velit rhoncus sagittis ac id massa. In hac habitasse platea dictumst. Aliquam fringilla non lectus ut lobortis. In hac habitasse platea dictumst. Praesent nec tellus leo.</p>
+				<div id="linkeado"><a href="http://laboratoria.la/" target="_blank"><img src="Imagenes/laboratoria.png" alt=""></a></div>
+				<div id="linkeado"><a href="https://twitter.com/" target="_blank"><img src="Imagenes/twitter.png" alt=""></a></div>
+				<div id="linkeado"><a href="https://www.youtube.com/" target="_blank"><img src="Imagenes/youtube.png" alt=""></a></div>
+				<div id="linkeado"><a href="https://www.facebook.com/" target="_blank"><img src="Imagenes/faebook.png" alt=""></a></div>
 			</div>
 		</div>
 
